--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
+    "jquery": "^3.6.3",
     "mini-css-extract-plugin": "^2.7.2",
     "webpack-cli": "^5.0.1"
   },
